# ffxiv-id-mapping

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: n00_configure_max_page_number.py  n01_scrape_eorzea_database_ja.py  n02_scrape_eorzea_database_de.py  n03_scrape_eorzea_database_fr.py  n04_scrape_eorzea_database_en.py  n05_scrape_xivapi.py  n06_merge_eorzea_database.py  n07_merge_xivapi.py  n08_create_mapping.py  utils.py
